--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -4,8 +4,8 @@
     padding: 0;
 }
 body{
-background-color: aqua ;
-color:black ; 
+background-color: #1C1C1C ;
+color: white ; 
 padding: 20px;
 }
 .btn{
