--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -9,13 +9,20 @@ color:black ;
 padding: 20px;
 }
 .btn{
-    display: block;
+    display: flex;
+    justify-content: center;
+    align-content: center;
     padding: 6px 40px;
     border: none;
     outline: none ;
     border-radius: 5px;
+    transition: all 0.3s ease ;
     cursor: pointer;
     margin-top: 5px;
+    text-decoration: none;
+    color: #111;
+    background-color: #fff;
+    max-width: 120px;
 }
 .btn:hover{
     background-color: #bcd1e6;
